[package]
name = "oz_merkle_rs"
version = "0.1.0"
edition = "2021"
description = "A lightweight Merkle tree implementation designed to seamlessly integrate with OpenZeppelin contracts for proof verification"
license = "MIT"
repository = "https://github.com/AnonJon/oz-merkle-rs"
documentation = "https://docs.rs/oz_merkle_rs"


[dependencies]
anyhow = "1.0"
alloy-primitives = "0.7.0"
