[package]
name = "oz_merkle_rs"
version = "0.1.3"
edition = "2021"
description = "A lightweight Merkle tree implementation designed to seamlessly integrate with OpenZeppelin contracts for proof verification"
license = "MIT"
repository = "https://github.com/AnonJon/oz-merkle-rs"
documentation = "https://docs.rs/oz_merkle_rs"


[dependencies]
anyhow = "1.0"
ethers = { version = "2.0" }
